--- a/style1.css
+++ b/style1.css
@@ -12,3 +12,56 @@
 .mainnavigation>ul li:hover>ul{
     display: block;
 }
+.box {
+    width: 15vw;
+    height: 15vw;
+    border-radius:0.25vw;
+    box-shadow: 0 10px 20px 0 #949494;
+    background-color: orange;
+    transition-property: all;
+    transition-duration: 0.5s;
+ }
+
+ .box:hover {
+    transform: translate3d(0,-1vh,0) perspective(200px) rotateY(15deg) rotatex(15deg);
+    /* translate on x,y,z, perspective is distance to eyes, rotate on y axis */
+    box-shadow: 0 20px 20px 0 #949494;
+    transition-property: all;
+    transition-duration: 1s;
+ }
+ /***Definition of an Animation********/
+
+ @keyframes spin1 {/*the name of our first animation*/
+
+    0%{
+        transform: translate3d(0,0,0) perspective(20px)
+        rotateY(0deg);
+    }
+    100%{
+        transform: translate3d(0,0,0) perspective(20px)
+        rotateY(360deg);
+    }
+
+}
+@keyframes jump1 {/*the name of our first animation*/
+
+    0%{
+        transform: translate3d(0,0,0);
+    }
+    100%{
+        transform: translate3d(0,-2vh,0);
+    }
+}
+.rotator {
+    font-size: 5vh;
+    width: 500px;
+    animation-name: spin1;
+    animation-duration: 50s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    position: absolute;
+    z-index: 1;
+}
+.button{
+    z-index: 2;
+}
